--- a/docs/styles/variables/_docs.scss
+++ b/docs/styles/variables/_docs.scss
@@ -13,6 +13,11 @@ $success-color-light: #aec3a1;
 $info-color: #2196F3;
 $info-color-light: #dce7f3;
 
+$primary-color: darken(magenta, 25%);
+
+$nodes-messages-min-width: 500px;
+$nodes-messages-max-width: 500px;
+
 /*
 	White space
 */
