--- a/docs/styles/docs.scss
+++ b/docs/styles/docs.scss
@@ -1,3 +1,4 @@
+@import "../../node_modules/foundation-sites/scss/foundation";
 @import "variables";
 @import "foundation";
 
@@ -15,8 +16,8 @@
 //@include foundation-badge;
 //@include foundation-breadcrumbs;
 //@include foundation-button-group;
-//@include foundation-callout;
-//@include foundation-close-button;
+@include foundation-callout;
+@include foundation-close-button;
 //@include foundation-menu;
 //@include foundation-menu-icon;
 //@include foundation-drilldown-menu;
